--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.qrgen-1.0.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
-    ${file.reference.zxing-j2se-1.7.jar}
+    ${file.reference.zxing-j2se-1.7.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ramanifernando_academy.Main_View
+main.class=com.fourgenius.www.public_access.user.login.user_login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
